fixed content squashing

--- a/src/components/_content-grid/content.scss
+++ b/src/components/_content-grid/content.scss
@@ -26,11 +26,11 @@
       &.page-subject {
         // background: rgba(255, 0, 0, 0.3);
         flex: 1;
-        padding: 0 10vw;
+        padding: 0 50px;
       }
       &.page-quote {
         // background: rgba(0, 128, 0, 0.3);
-        padding: 0 10vw;
+        padding: 0 50px;
         flex: 1;
       }
     }
