--- a/src/components/quote/quote.scss
+++ b/src/components/quote/quote.scss
@@ -22,7 +22,7 @@
     display: flex;
     span {
         display: inline;
-        font-size: 1.5em;
+        font-size: 1em;
         padding: 0;
         // line-height: 0;
     }
